# Edge-Deployment-Resource-Management

./: .dockerignore  Dockerfile  LICENSE  README.md  env.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt
edge-deployment-resource-optimization/: README.md
server/: app.py
