[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "edge-deployment-env"
version = "0.1.0"
description = "Edge deployment resource simulation environment"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "openai",
    "pydantic",
    "openenv-core",
    "numpy",
]

[tool.setuptools]
packages = ["."]

[project.scripts]
server = "server.app:main"
